<resources>
    <string name="app_name">Gestion Country</string>
    <string name="country_name">Nom du pays</string>
    <string name="asia">Asie</string>
    <string name="europe">Europe</string>
    <string name="other">Autre</string>
    <string name="add_country">Ajouter un pays</string>
    <string name="add_country_message">Pays ajouté avec succès</string>
    <string name="list_countries">Liste des pays</string>
    <string name="synchronize">Synchroniser</string>
    <string name="country_flag">Drapeau du pays</string>
    <string name="advanced">Avancé</string>
    <string name="search_hint">Rechercher un pays</string>
    <string name="add_to_favorites">Favori</string>
    <string name="flag_image">Description de limage du drapeau</string>

    <string-array name="government_types">
        <item>Démocratie</item>
        <item>Monarchie</item>
        <item>Dictature</item>
    </string-array>
</resources>

