<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddCountryActivity">

    <EditText
        android:id="@+id/add_country_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country_name" />

    <RadioGroup
        android:id="@+id/add_country_continent_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/add_country_continent_asia_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asia" />

        <RadioButton
            android:id="@+id/add_country_continent_europe_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/europe" />

        <RadioButton
            android:id="@+id/add_country_continent_other_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/add_country_population_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1000000000" />

    <TextView
        android:id="@+id/add_country_population_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0" />

    <Spinner
        android:id="@+id/add_country_government_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/government_types" />

    <Button
        android:id="@+id/add_country_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_country" />

</LinearLayout>
